# Modelflow2

./: .gitignore  README.md  launch_jupyter.bat  python instalation.txt  releases.md
Examples/: Abstract ModelFlow a Python library to manage and solve economic models.ipynb  Abstract longer.ipynb  Overview.ipynb
Examples/ADAM/: ADAM - create the model and run.ipynb  ADAM.ipynb  adamrun2017.py  getdes.py  test ADAM -Copy1.ipynb  test ADAM -tony.ipynb  test ADAM .ipynb  test_load.py
Examples/Bank of Japan - Quarterly Japanese Economic Model/: Q-JEM experiments.ipynb  first.prg  grap_qjem.py  qjem.pcim  run_qjem.py
Examples/Economic Credit Loss/: ECL Z  multiple scenarios.ipynb  ECL Z - goal seeking.ipynb  ECL Z - just run.ipynb  ECL Z - lifetime.ipynb  ECL Z setup.ipynb  ecl.pcim
Examples/Federal Reserve Board - US model/: FRBUS - CEF 2021.ipynb  FRBUS - example - VAR.ipynb  FRBUS model consistent expectations-Copy1.ipynb  FRBUS model consistent expectations-cef2021.ipynb  FRBUS model consistent expectations.ipynb  FRBUS.ipynb  frbus-run.py  mfrbusvar.json
Examples/Logistic/: logistic.html  logistic.ipynb
Examples/ModelFlow features/: Differentiation .html  Differentiation .ipynb  (+9 more)
binder/: enviorement.yml  environment.yml  environment_no.yml  make_trusted.py  postBuild  postBuild_no  start
config/: mf.yaml
doc2/: build.py
modelflow/: .gitignore  CLAUDE.md  Untitled-1.ipynb  backup.py  changelog.md  classes.dot  ib.pcim  ib.xlsx  license.md  modelBLfunk.py  model_Excel.py  model_cvx.py  model_doable.py  model_dynare.py  model_financial_stability.py  model_ifrs9.py  model_latex.py  model_latex_class.py  model_latex_classpy.py  model_parquet_mixin.py  model_run_numba.py  model_wx.py  modelclass.py  modelclass2.py  modelconstruct.py  modelconstruct_estimation.py  modeldash.py  modeldashboot.py  modeldashsidebar.py  modeldekom.py  modeldiff.py  modeldisplay.py  modelestimation.py  modelestimator_new.py  modelfeedback.py  modelflow2 - Genvej (2).lnk  modelflow2 - Genvej.lnk  modelgrab.py  modelgrabgdx.py  modelgrabwf2.py  (+35 more)
modelflow/.claude/: settings.local.json
modelflow/.claude/skills/: estimation.md  makemodel.md  skills.ipynb
modelflow/.claude/skills/modelflow/: SKILL.md
modelflow/.claude/skills/modelflow/references/: decomposition.md  installation.md  makemodel.md  model-construction.md  simulation-methods.md  usage.md  worldbank-onboarding.md
modelflow/.pylint.d/: model_latex1.stats
modelflow/doc/: Abstract ModelFlow a Python library to manage and solve economic models.ipynb  installation.md  modefflow diff.ipynb  modelflow-gauss.ipynb  supply_demand.ipynb
modelflow/exceltest/: lcr.frm  lcrberegning2.xlsx
modelflow/manual/: build.py
modelflow/modelsource/: ADAM_sim_jit_jitsolver.py
modelflow/word/: frmltest.docx  frmltest2.docx  frmltest2.tex  wordtest.py
(+500 files in other folders)
